cambios sistema funcional - F Actualización Masiva de productos, Mejoras en la interfaz de usuario

--- a/Resources/PlantillaVenta.html
+++ b/Resources/PlantillaVenta.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Web Page Design</title>
+    <title>Comprobante</title>
     <style>
         table.border {
             border-collapse: collapse;
@@ -61,6 +61,7 @@
                 <label class="header">@nombrenegocio</label><br />
                 <label style="font-size:11px;">TEL: @telnegocio</label><br />
                 <label style="font-size:11px;">Dirección: @direcnegocio</label><br />
+                <label style="font-size:9px;">Documento no válido como factura</label><br />
             </td>
             <td style="width:25%;" align="right" valign="top">
                 <table style="width:100%" class="border">
@@ -82,11 +83,11 @@
     <hr />
     <table border="0" style="width:100%">
         <tr>
-            <td class="label">Documento Cliente:</td>
+            <td class="label">Doc. Cliente:</td>
             <td class="value">@doccliente</td>
         </tr>
         <tr>
-            <td class="label">Nombre Cliente:</td>
+            <td class="label">Cliente:</td>
             <td class="value">@nombrecliente</td>
         </tr>
         <tr>
@@ -94,7 +95,7 @@
             <td class="value">@fecharegistro</td>
         </tr>
         <tr>
-            <td class="label">Usuario Registro:</td>
+            <td class="label">Vendedor:</td>
             <td class="value">@usuarioregistro</td>
         </tr>
     </table>
@@ -136,11 +137,6 @@
         <tr>
             <td style="width:100%" align="center">
                 <label class="header">GRACIAS POR ELEGIRNOS!!!</label>
-            </td>
-        </tr>
-        <tr>
-            <td style="width:10%" align="left">
-                <label style="font-size:9px;font-weight:bold">Desarrollado por GÉSTION COMERCIAL</label>
             </td>
         </tr>
     </table>
