Funcional todo... correcciones, mejoraras hasta la parte de icorporar imagenes a la carga de productos

--- a/Resources/PlantillaVenta.html
+++ b/Resources/PlantillaVenta.html
@@ -99,13 +99,14 @@
             <td class="value">@usuarioregistro</td>
         </tr>
     </table>
+
     <div class="space"></div>
     <table style="width:100%" class="border">
         <thead>
             <tr>
-                <th>Producto</th>
+                <th>Descripción</th>
                 <th>Cantidad</th>
-                <th>Precio Prod</th>
+                <th>Importe</th>
             </tr>
         </thead>
         <tbody>
@@ -114,29 +115,30 @@
         </tbody>
     </table>
 
-
     <div class="space"></div>
-    <table class="footer">
+    <table class="footer" style="font-size: 15px; text-align: right;">
         <thead>
             <tr>
-                <th>Monto Total</th>
-                <th>Pago Con</th>
-                <th>Cambio</th>
+                <th style="font-size: 12px;">Total</th>
+                <th style="font-size: 12px;">Pago</th>
+                <th style="font-size: 12px;">Cambio</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td>@montototal</td>
-                <td>@pagocon</td>
-                <td>@cambio</td>
+                <td style="font-size: 17px;">@montototal</td>
+                <td style="font-size: 17px;">@pagocon</td>
+                <td style="font-size: 17px;">@cambio</td>
             </tr>
         </tbody>
     </table>
+
+
     <hr />
     <table border="0" style="width:100%">
         <tr>
             <td style="width:100%" align="center">
-                <label class="header">GRACIAS POR ELEGIRNOS!!!</label>
+                <label class="header" style="font-size: 10px;">¡Gracias por tu compra!</label>
             </td>
         </tr>
     </table>
